添加JVM调试测试